[Style] Add comment

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-17T13:50:17.538242Z",
-     "start_time": "2021-07-17T13:50:06.858029Z"
+     "end_time": "2021-07-22T01:34:29.937964Z",
+     "start_time": "2021-07-22T01:34:21.842712Z"
     }
    },
    "outputs": [],
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-17T13:50:20.857579Z",
-     "start_time": "2021-07-17T13:50:17.554965Z"
+     "end_time": "2021-07-22T01:34:31.510671Z",
+     "start_time": "2021-07-22T01:34:31.499700Z"
     }
    },
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA avilable: True\n"
+      "CUDA avilable: False\n"
      ]
     }
    ],
@@ -958,7 +958,7 @@
     "    (tf.float32, tf.float32),\n",
     "    ([300, 300, 3], [10])\n",
     ")\n",
-    "# train_dataset\n",
+    "train_dataset = train_\n",
     "\n",
     "validation_dataset = tf.data.Dataset.from_generator(\n",
     "    lambda: train_validation_generator(path=\"./data/train.csv\", fraction=0.2),\n",
@@ -980,6 +980,14 @@
    "metadata": {},
    "source": [
     "## Initialing model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To do\n",
+    "- Need to set about ModelCheckpoint"
    ]
   },
   {
@@ -1100,7 +1108,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1114,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.0"
   },
   "toc": {
    "base_numbering": 1,
