[Feat] Add Modelcheckpoint

--- a/ANBW_v3.ipynb
+++ b/ANBW_v3.ipynb
@@ -39,22 +39,6 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-17T13:50:06.735629Z",
-     "start_time": "2021-07-17T13:50:06.719601Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "\n",
-    "sys._enablelegacywindowsfsencoding()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
      "end_time": "2021-07-22T01:34:29.937964Z",
      "start_time": "2021-07-22T01:34:21.842712Z"
     }
@@ -63,19 +47,16 @@
    "source": [
     "import gc\n",
     "import cv2\n",
-    "import csv\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split"
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-22T01:34:31.510671Z",
@@ -98,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:20.887581Z",
@@ -121,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:22.770675Z",
@@ -137,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:22.935653Z",
@@ -179,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:22.981759Z",
@@ -205,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.042798Z",
@@ -218,7 +199,7 @@
       "text/plain": "    digit letter  0  1  2  3  4  5  6  7  ...  774  775  776  777  778  779  \\\nid                                        ...                                 \n1       5      L  1  1  1  4  3  0  0  4  ...    2    1    0    1    2    4   \n2       0      B  0  4  0  0  4  1  1  1  ...    0    3    0    1    4    1   \n3       4      L  1  1  2  2  1  1  1  0  ...    3    3    3    0    2    0   \n4       9      D  1  2  0  2  0  4  0  3  ...    3    3    2    0    1    4   \n5       6      A  3  0  2  4  0  3  0  4  ...    4    4    3    2    1    3   \n\n    780  781  782  783  \nid                      \n1     4    4    3    4  \n2     4    2    1    2  \n3     3    0    2    2  \n4     0    0    1    1  \n5     4    3    1    2  \n\n[5 rows x 786 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>digit</th>\n      <th>letter</th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>...</th>\n      <th>774</th>\n      <th>775</th>\n      <th>776</th>\n      <th>777</th>\n      <th>778</th>\n      <th>779</th>\n      <th>780</th>\n      <th>781</th>\n      <th>782</th>\n      <th>783</th>\n    </tr>\n    <tr>\n      <th>id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>5</td>\n      <td>L</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>4</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>...</td>\n      <td>2</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2</td>\n      <td>4</td>\n      <td>4</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0</td>\n      <td>B</td>\n      <td>0</td>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>L</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>...</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>9</td>\n      <td>D</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n      <td>0</td>\n      <td>3</td>\n      <td>...</td>\n      <td>3</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>A</td>\n      <td>3</td>\n      <td>0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>4</td>\n      <td>...</td>\n      <td>4</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 786 columns</p>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.087820Z",
@@ -244,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.283757Z",
@@ -283,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.328799Z",
@@ -295,7 +276,7 @@
      "data": {
       "text/plain": "(2048, 787)"
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.448795Z",
@@ -326,7 +307,7 @@
       "text/plain": "     letter  0  1  2  3  4  5  6  7  8  ...  774  775  776  777  778  779  \\\nid                                      ...                                 \n2049      L  0  4  0  2  4  2  3  1  0  ...    2    0    4    2    2    4   \n2050      C  4  1  4  0  1  1  0  2  2  ...    0    3    2    4    2    4   \n2051      S  0  4  0  1  3  2  3  0  2  ...    1    3    2    0    3    2   \n2052      K  2  1  3  3  3  4  3  0  0  ...    3    0    3    2    4    1   \n2053      W  1  0  1  1  2  2  1  4  1  ...    4    3    1    4    0    2   \n\n      780  781  782  783  \nid                        \n2049    3    4    1    4  \n2050    2    2    1    2  \n2051    3    0    1    4  \n2052    0    4    4    4  \n2053    1    2    3    4  \n\n[5 rows x 785 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>letter</th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>...</th>\n      <th>774</th>\n      <th>775</th>\n      <th>776</th>\n      <th>777</th>\n      <th>778</th>\n      <th>779</th>\n      <th>780</th>\n      <th>781</th>\n      <th>782</th>\n      <th>783</th>\n    </tr>\n    <tr>\n      <th>id</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2049</th>\n      <td>L</td>\n      <td>0</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>3</td>\n      <td>1</td>\n      <td>0</td>\n      <td>...</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>4</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2050</th>\n      <td>C</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>2</td>\n      <td>...</td>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>2051</th>\n      <td>S</td>\n      <td>0</td>\n      <td>4</td>\n      <td>0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n      <td>0</td>\n      <td>2</td>\n      <td>...</td>\n      <td>1</td>\n      <td>3</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n      <td>0</td>\n      <td>1</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2052</th>\n      <td>K</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n      <td>4</td>\n      <td>3</td>\n      <td>0</td>\n      <td>0</td>\n      <td>...</td>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>2</td>\n      <td>4</td>\n      <td>1</td>\n      <td>0</td>\n      <td>4</td>\n      <td>4</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>2053</th>\n      <td>W</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1</td>\n      <td>...</td>\n      <td>4</td>\n      <td>3</td>\n      <td>1</td>\n      <td>4</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 785 columns</p>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.508788Z",
@@ -349,7 +330,7 @@
      "data": {
       "text/plain": "(20480, 786)"
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.840490Z",
@@ -408,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:23.976494Z",
@@ -418,9 +399,9 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "22960"
+      "text/plain": "26504"
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:24.006690Z",
@@ -478,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:50:24.036559Z",
@@ -513,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-17T13:52:36.535301Z",
@@ -525,26 +506,30 @@
     "# Have to give args to generator with using lambda\n",
     "# Train: 0.8\n",
     "# Validation: 0.2\n",
+    "# Batch: 8\n",
+    "BATCH = 8\n",
+    "BUFFER_SIZE = 2048\n",
+    "\n",
     "train_dataset = tf.data.Dataset.from_generator(\n",
     "    lambda: train_validation_generator(path=\"./data/train.csv\", fraction=0.8),\n",
     "    (tf.float32, tf.float32),\n",
     "    ([300, 300, 3], [10])\n",
     ")\n",
-    "# train_dataset = train_\n",
+    "train_dataset = train_dataset.batch(BATCH).shuffle(buffer_size=BUFFER_SIZE, seed=SEED)\n",
     "\n",
     "validation_dataset = tf.data.Dataset.from_generator(\n",
     "    lambda: train_validation_generator(path=\"./data/train.csv\", fraction=0.2),\n",
     "    (tf.float32, tf.float32),\n",
     "    ([300, 300, 3], [10])\n",
     ")\n",
-    "# validation_dataset\n",
+    "validation_dataset = validation_dataset.batch(BATCH).shuffle(buffer_size=BUFFER_SIZE, seed=SEED)\n",
     "\n",
     "test_dataset = tf.data.Dataset.from_generator(\n",
     "    lambda: test_generator(path=\"./data/test.csv\"),\n",
     "    (tf.float32),\n",
     "    ([300, 300, 3])\n",
     ")\n",
-    "# test_dataset"
+    "test_dataset = test_dataset.batch(BATCH).shuffle(buffer_size=BUFFER_SIZE, seed=SEED)"
    ]
   },
   {
@@ -564,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-13T08:16:35.733785Z",
@@ -574,31 +559,83 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from tensorflow.keras.callbacks import ReduceLROnPlateau"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-07-13T08:16:35.748782Z",
-     "start_time": "2021-07-13T08:16:35.734786Z"
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory Created: ./model/v3\n"
+     ]
     }
-   },
+   ],
+   "source": [
+    "model_save_path = \"./model/v3\"\n",
+    "\n",
+    "if not(os.path.isdir(model_save_path)):\n",
+    "    os.makedirs(os.path.join(model_save_path))\n",
+    "    print(\"Directory Created: %s\" % model_save_path)\n",
+    "else:\n",
+    "    print(\"Directory already exists: %s\" % model_save_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "model_checkpoint_callback = ModelCheckpoint(\n",
+    "    filepath=model_save_path,\n",
+    "    monitor=\"val_accuracy\",\n",
+    "    save_best_only=True\n",
+    ")\n",
+    "\n",
+    "early_stopping = EarlyStopping(monitor=\"val_loss\", verbose=1, patience=10),\n",
+    "\n",
+    "reduce_LR = ReduceLROnPlateau(monitor=\"val_loss\", factor=0.5, patience=1,\n",
+    "                      min_lr=0.00001, verbose=1, mode=\"min\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "EPOCHS = 100\n",
     "CALLBACKS = [\n",
-    "    EarlyStopping(monitor=\"val_loss\", verbose=1, patience=10),\n",
-    "    ReduceLROnPlateau(monitor=\"val_loss\", factor=0.5, patience=1,\n",
-    "                      min_lr=0.00001, verbose=1, mode=\"min\")\n",
+    "    model_checkpoint_callback,\n",
+    "    early_stopping,\n",
+    "    reduce_LR\n",
     "]"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-13T08:16:39.635568Z",
@@ -618,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-13T08:16:42.083625Z",
@@ -637,14 +674,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-07-13T08:16:42.113642Z",
      "start_time": "2021-07-13T08:16:42.085625Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "efficientnetb3 (Functional)  (None, 10)                10798905  \n",
+      "=================================================================\n",
+      "Total params: 10,798,905\n",
+      "Trainable params: 10,711,602\n",
+      "Non-trainable params: 87,303\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
