[Feat] ANBW model comprasion

--- a/model_comprasion/DenseNet121 - 32x32.ipynb
+++ b/model_comprasion/DenseNet121 - 32x32.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e34eec8",
+   "id": "d77fa0d3",
    "metadata": {},
    "source": [
     "# DenseNet121 - 32x32"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cb0a98e",
+   "id": "6cd036e1",
    "metadata": {},
    "source": [
     "### Setup"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42c76d82",
+   "id": "d5a28342",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:31:53.204411Z",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ca2bf22",
+   "id": "7b54401a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:31:56.466739Z",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b273e10",
+   "id": "b0321453",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:31:56.541719Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "172d2df0",
+   "id": "0a6f6799",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:31:56.556690Z",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd2b009a",
+   "id": "461245c8",
    "metadata": {},
    "source": [
     "### Preprocessing"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d59c2e47",
+   "id": "c907b136",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:31:57.858811Z",
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "607f7e99",
+   "id": "a51c9689",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:27.470318Z",
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "603a19e0",
+   "id": "d88f0f1b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:27.485204Z",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d517278f",
+   "id": "175512bc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:27.515249Z",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ebf6084",
+   "id": "ca3e4b68",
    "metadata": {},
    "source": [
     "### Initialing model"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ae947204",
+   "id": "2886b32c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:27.530775Z",
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "06455d8e",
+   "id": "f29685e8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:27.545812Z",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c3682ca8",
+   "id": "984e02ed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:30.670414Z",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e478f29",
+   "id": "382318ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:32.045848Z",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3aff12be",
+   "id": "edc2da38",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:33:32.076066Z",
@@ -323,16 +323,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78132d3",
+   "id": "5e4e7fbb",
    "metadata": {},
    "source": [
-    "### Train Model"
+    "### Train model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ff3f5533",
+   "id": "38d1faf2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T12:35:48.253845Z",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c21a0b37",
+   "id": "ebbd4841",
    "metadata": {},
    "source": [
     "### Predict"
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "88a14974",
+   "id": "6d2e9e53",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T13:08:02.766482Z",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0d591b30",
+   "id": "f8517764",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T13:18:40.179402Z",
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e39b7ac2",
+   "id": "62d7b343",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-22T13:18:40.540974Z",
